move startup directory to web ui settings & default to ko home
